--- a/2.html/index.html
+++ b/2.html/index.html
@@ -21,7 +21,7 @@
       alt="MaoMao's picture"
     />
     <img src="./images/images.jfif" alt="a cat" />
-
+<p>test</p>
     <table>
       <tr>
         <th>Header 1</th>
