--- a/3.css/landing-page/index.html
+++ b/3.css/landing-page/index.html
@@ -12,14 +12,14 @@
   <body>
     <!-- navbar -->
     <header>
-      <nav>
+      <nav class="container">
         <!-- logo -->
         <a href="/">
           <img src="./images/logo.png" alt="Agency's logo" />
         </a>
         <!-- nav list -->
-        <ul>
-          <li><a href="">Home</a></li>
+        <ul class="navigation">
+          <li class="active"><a href="">Home</a></li>
           <li><a href="">Plugins</a></li>
           <li><a href="">Themes</a></li>
           <li><a href="">Templates</a></li>
