--- a/3.css/landing-page/index.html
+++ b/3.css/landing-page/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="fonts/cabinet-grotesk/css/font.css" />
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/navbar.css" />
+    <link rel="stylesheet" href="css/hero.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -34,13 +35,44 @@
     <main>
       <!-- hero section -->
       <section id="hero">
-        <h1>
-          Lorem ipsum, <span>dolor</span> sit amet consectetur adipisicing elit.
-          Enim praesentium consequatur magnam voluptatum sit, suscipit
-          doloremque explicabo molestias rem odio ducimus eaque, amet saepe
-          soluta eveniet unde repellendus earum nihil.
-        </h1>
-        <h4>Test</h4>
+        <!-- 1st part -->
+        <div class="container row">
+          <h1>we create beautiful <span>efficient</span> agencies websites.</h1>
+          <div class="start">
+            <p>
+              You need to get positive results when you spend hard earned
+              marketing and promotions need to get positive results when you
+            </p>
+            <button class="btn">Get Started</button>
+          </div>
+        </div>
+
+        <!-- 2nd part -->
+        <div class="hero-stats">
+          <div class="hero-image">
+            <img src="./images/hero.png" alt="Hero image" />
+          </div>
+          <ul class="stats">
+            <li>
+              <h2>
+                <span data-count="13" class="number">0</span><span>+</span>
+              </h2>
+              <p>Awards won</p>
+            </li>
+            <li>
+              <h2>
+                <span data-count="500" class="number">0</span><span>+</span>
+              </h2>
+              <p>Projects Done</p>
+            </li>
+            <li>
+              <h2>
+                <span data-count="274" class="number">0</span><span>+</span>
+              </h2>
+              <p>Brands Trust Us</p>
+            </li>
+          </ul>
+        </div>
       </section>
       <section id="sponsors"></section>
       <section id="services"></section>
