--- a/3.css/landing-page/index.html
+++ b/3.css/landing-page/index.html
@@ -50,7 +50,20 @@
         <!-- 2nd part -->
         <div class="hero-stats">
           <div class="hero-image">
-            <img src="./images/hero.png" alt="Hero image" />
+            <img class="img" src="./images/hero.png" alt="Hero image" />
+
+            <!-- decoration -->
+
+            <img
+              class="explore"
+              src="./images/explore.png"
+              alt="explore decoration"
+            />
+            <img
+              class="arrow"
+              src="./images/arrow.svg"
+              alt="arrow decoration"
+            />
           </div>
           <ul class="stats">
             <li>
@@ -73,6 +86,8 @@
             </li>
           </ul>
         </div>
+
+        <img class="star" src="./images/logo-white.svg" alt="" />
       </section>
       <section id="sponsors"></section>
       <section id="services"></section>
