--- a/3.css/landing-page/index.html
+++ b/3.css/landing-page/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/root.css" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/hero.css" />
+    <link rel="stylesheet" href="css/sponsors.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -89,7 +90,49 @@
 
         <img class="star" src="./images/logo-white.svg" alt="" />
       </section>
-      <section id="sponsors"></section>
+
+      <section id="sponsors">
+        <div class="banner" id="banner-1">
+          <div class="banner-container">
+            <img src="./images/sponsors/logo-0.svg" alt="" />
+            <img src="./images/sponsors/logo-1.svg" alt="" />
+            <img src="./images/sponsors/logo-2.svg" alt="" />
+            <img src="./images/sponsors/logo-3.svg" alt="" />
+            <img src="./images/sponsors/logo-4.svg" alt="" />
+            <img src="./images/sponsors/logo-5.svg" alt="" />
+            <img src="./images/sponsors/logo-6.svg" alt="" />
+            <img src="./images/sponsors/logo-7.svg" alt="" />
+            <img src="./images/sponsors/logo-0.svg" alt="" />
+            <img src="./images/sponsors/logo-1.svg" alt="" />
+            <img src="./images/sponsors/logo-2.svg" alt="" />
+            <img src="./images/sponsors/logo-3.svg" alt="" />
+            <img src="./images/sponsors/logo-4.svg" alt="" />
+            <img src="./images/sponsors/logo-5.svg" alt="" />
+            <img src="./images/sponsors/logo-6.svg" alt="" />
+            <img src="./images/sponsors/logo-7.svg" alt="" />
+          </div>
+        </div>
+        <div class="banner" id="banner-2">
+          <div class="banner-container">
+            <img src="./images/sponsors/logo-0.svg" alt="" />
+            <img src="./images/sponsors/logo-1.svg" alt="" />
+            <img src="./images/sponsors/logo-2.svg" alt="" />
+            <img src="./images/sponsors/logo-3.svg" alt="" />
+            <img src="./images/sponsors/logo-4.svg" alt="" />
+            <img src="./images/sponsors/logo-5.svg" alt="" />
+            <img src="./images/sponsors/logo-6.svg" alt="" />
+            <img src="./images/sponsors/logo-7.svg" alt="" />
+            <img src="./images/sponsors/logo-0.svg" alt="" />
+            <img src="./images/sponsors/logo-1.svg" alt="" />
+            <img src="./images/sponsors/logo-2.svg" alt="" />
+            <img src="./images/sponsors/logo-3.svg" alt="" />
+            <img src="./images/sponsors/logo-4.svg" alt="" />
+            <img src="./images/sponsors/logo-5.svg" alt="" />
+            <img src="./images/sponsors/logo-6.svg" alt="" />
+            <img src="./images/sponsors/logo-7.svg" alt="" />
+          </div>
+        </div>
+      </section>
       <section id="services"></section>
       <section id="projects"></section>
       <section id="compagnies"></section>
