--- a/3.css/landing-page/index.html
+++ b/3.css/landing-page/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="fonts/cabinet-grotesk/css/font.css" />
     <link rel="stylesheet" href="css/root.css" />
+    <link rel="stylesheet" href="css/icons.css" />
     <link rel="stylesheet" href="css/navbar.css" />
     <link rel="stylesheet" href="css/hero.css" />
     <link rel="stylesheet" href="css/sponsors.css" />
+    <link rel="stylesheet" href="css/services.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -91,6 +93,7 @@
         <img class="star" src="./images/logo-white.svg" alt="" />
       </section>
 
+      <!-- sponsors -->
       <section id="sponsors">
         <div class="banner" id="banner-1">
           <div class="banner-container">
@@ -133,7 +136,62 @@
           </div>
         </div>
       </section>
-      <section id="services"></section>
+
+      <!-- services -->
+      <section id="services" class="container">
+        <h4>Our services</h4>
+        <h2>What do we <span>Provide</span>?</h2>
+        <ul>
+          <li class="card card-selected">
+            <div class="circle"><span class="tabler--code"></span></div>
+            <h3>Theme Developement</h3>
+            <p>
+              You need to get positive results when you spend hard earned
+              marketing and promotions.
+            </p>
+          </li>
+          <li class="card">
+            <div class="circle"><span class="tabler--code"></span></div>
+            <h3>Theme Developement</h3>
+            <p>
+              You need to get positive results when you spend hard earned
+              marketing and promotions.
+            </p>
+          </li>
+          <li class="card">
+            <div class="circle"><span class="tabler--code"></span></div>
+            <h3>Theme Developement</h3>
+            <p>
+              You need to get positive results when you spend hard earned
+              marketing and promotions.
+            </p>
+          </li>
+          <li class="card">
+            <div class="circle"><span class="tabler--code"></span></div>
+            <h3>Theme Developement</h3>
+            <p>
+              You need to get positive results when you spend hard earned
+              marketing and promotions.
+            </p>
+          </li>
+          <li class="card">
+            <div class="circle"><span class="tabler--code"></span></div>
+            <h3>Theme Developement</h3>
+            <p>
+              You need to get positive results when you spend hard earned
+              marketing and promotions.
+            </p>
+          </li>
+          <li class="card">
+            <div class="circle"><span class="tabler--code"></span></div>
+            <h3>Theme Developement</h3>
+            <p>
+              You need to get positive results when you spend hard earned
+              marketing and promotions.
+            </p>
+          </li>
+        </ul>
+      </section>
       <section id="projects"></section>
       <section id="compagnies"></section>
       <section id="process"></section>
