--- a/3.css/landing-page/index.html
+++ b/3.css/landing-page/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/hero.css" />
     <link rel="stylesheet" href="css/sponsors.css" />
     <link rel="stylesheet" href="css/services.css" />
+    <link rel="stylesheet" href="css/projects.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -192,7 +193,71 @@
           </li>
         </ul>
       </section>
-      <section id="projects"></section>
+
+      <!-- projects -->
+      <section id="projects">
+        <div class="container">
+          <div class="row">
+            <h2>Our recent projects we did</h2>
+            <button class="btn btn-base">All projects</button>
+          </div>
+          <div id="project-slider">
+            <ul class="project-container">
+              <li class="card">
+                <div class="card-body">
+                  <div class="title">
+                    <hr />
+                    <h3>landing page uI</h3>
+                  </div>
+                  <div class="description">
+                    <p>Nike Landing Page Website</p>
+                    <div class="circle">
+                      <span class="arrow-top"></span>
+                    </div>
+                  </div>
+                </div>
+                <img src="./images/project.png" alt="" />
+              </li>
+              <li class="card">
+                <img src="./images/project.png" alt="" />
+                <div class="card-body">
+                  <div class="title">
+                    <hr />
+                    <h3>Landing Page UI</h3>
+                  </div>
+                  <div class="description">
+                    <p>Nike Landing Page Website</p>
+                    <div class="circle">
+                      <span class="arrow-top"></span>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="card">
+                <div class="card-body">
+                  <div class="title">
+                    <hr />
+                    <h3>Landing Page UI</h3>
+                  </div>
+                  <div class="description">
+                    <p>Nike Landing Page Website</p>
+                    <div class="circle">
+                      <span class="arrow-top"></span>
+                    </div>
+                  </div>
+                </div>
+                <img src="./images/project.png" alt="" />
+              </li>
+            </ul>
+            <div class="projects-dots">
+              <div class="dot"></div>
+              <div class="dot"></div>
+              <div class="dot"></div>
+            </div>
+          </div>
+        </div>
+        <div class="main-color"></div>
+      </section>
       <section id="compagnies"></section>
       <section id="process"></section>
       <section id="web-resources"></section>
