--- a/3.css/landing-page/index.html
+++ b/3.css/landing-page/index.html
@@ -13,6 +13,10 @@
     <link rel="stylesheet" href="css/sponsors.css" />
     <link rel="stylesheet" href="css/services.css" />
     <link rel="stylesheet" href="css/projects.css" />
+    <link rel="stylesheet" href="css/compagnies.css" />
+    <link rel="stylesheet" href="css/process.css" />
+    <link rel="stylesheet" href="css/resourcess.css" />
+    <link rel="stylesheet" href="css/testimonials.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -258,11 +262,321 @@
         </div>
         <div class="main-color"></div>
       </section>
-      <section id="compagnies"></section>
-      <section id="process"></section>
-      <section id="web-resources"></section>
-      <section id="testimonials"></section>
-      <section id="web-posts"></section>
+
+      <!-- compagnies -->
+      <section id="compagnies" class="container">
+        <h4>Award winning wordPress Agency</h4>
+        <h2>They trust <span>us</span> ?</h2>
+        <div id="trusts-logos-1">
+          <ul>
+            <li>
+              <img src="./images/trusts/logo-1.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-2.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-3.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-4.png" alt="" />
+            </li>
+            <li class="main-color">
+              <img src="./images/trusts/logo-5.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-6.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-7.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-8.png" alt="" />
+            </li>
+          </ul>
+        </div>
+        <div id="trusts-logos-2">
+          <ul>
+            <li>
+              <img src="./images/trusts/logo-7.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-8.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-9.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-10.png" alt="" />
+            </li>
+            <li class="main-color">
+              <img src="./images/trusts/logo-11.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-12.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-13.png" alt="" />
+            </li>
+            <li>
+              <img src="./images/trusts/logo-1.png" alt="" />
+            </li>
+          </ul>
+        </div>
+      </section>
+
+      <!-- process -->
+      <section id="process">
+        <div class="container content">
+          <h2>What's our <span>creative</span> process ?</h2>
+          <ul>
+            <li>
+              <div class="circle">
+                <span class="tabler--code"></span>
+              </div>
+              <div>
+                <h5>Empathize</h5>
+                <p>Nam eget aliquam facilisis tortor, massa. Elementum</p>
+              </div>
+            </li>
+            <li>
+              <div class="circle">
+                <span class="tabler--code"></span>
+              </div>
+              <div>
+                <h5>Empathize</h5>
+                <p>Nam eget aliquam facilisis tortor, massa. Elementum</p>
+              </div>
+            </li>
+            <li>
+              <div class="circle">
+                <span class="tabler--code"></span>
+              </div>
+              <div>
+                <h5>Empathize</h5>
+                <p>Nam eget aliquam facilisis tortor, massa. Elementum</p>
+              </div>
+            </li>
+            <li>
+              <div class="circle">
+                <span class="tabler--code"></span>
+              </div>
+              <div>
+                <h5>Empathize</h5>
+                <p>Nam eget aliquam facilisis tortor, massa. Elementum</p>
+              </div>
+            </li>
+          </ul>
+        </div>
+        <img src="./images/Image.png" alt="" />
+      </section>
+      <section id="web-resources" class="web-resources">
+        <div class="container">
+          <h2>WordPress <span>RESOURCES</span></h2>
+          <nav>
+            <ul class="tabs">
+              <li class="tab"><a href="">Plugins</a></li>
+              <li class="tab"><a href="">Themes</a></li>
+              <li class="tab"><a href="">Templates</a></li>
+              <li class="tab"><a href="">UI Kits</a></li>
+            </ul>
+            <a href="/" class="more"
+              >View All <span class="arrow-right"></span>
+            </a>
+          </nav>
+          <div class="tab-content">
+            <div class="tab-pane active">
+              <ul class="resources-list">
+                <li class="resource-card">
+                  <img
+                    class="resource-card-image"
+                    src="./images/r1.png"
+                    alt=""
+                  />
+                  <div class="resource-card-body">
+                    <div class="resource-card-header">
+                      <h5>Plugin name</h5>
+                      <p>Blog</p>
+                    </div>
+                    <button class="btn btn-small">View</button>
+                  </div>
+                </li>
+                <li class="resource-card">
+                  <img
+                    class="resource-card-image"
+                    src="./images/r2.png"
+                    alt=""
+                  />
+                  <div class="resource-card-body">
+                    <div class="resource-card-header">
+                      <h5>Plugin name</h5>
+                      <p>Blog</p>
+                    </div>
+                    <button class="btn btn-small">View</button>
+                  </div>
+                </li>
+                <li class="resource-card">
+                  <img
+                    class="resource-card-image"
+                    src="./images/r3.png"
+                    alt=""
+                  />
+                  <div class="resource-card-body">
+                    <div class="resource-card-header">
+                      <h5>Plugin name</h5>
+                      <p>Blog</p>
+                    </div>
+                    <button class="btn btn-small">View</button>
+                  </div>
+                </li>
+                <li class="resource-card">
+                  <img
+                    class="resource-card-image"
+                    src="./images/r4.png"
+                    alt=""
+                  />
+                  <div class="resource-card-body">
+                    <div class="resource-card-header">
+                      <h5>Plugin name</h5>
+                      <p>Blog</p>
+                    </div>
+                    <button class="btn btn-small">View</button>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- Testimonials -->
+      <section id="testimonials">
+        <div class="container">
+          <h4>Testimonials</h4>
+          <h2>What our clients <span>say</span> ?</h2>
+          <div class="content">
+            <!-- figure -->
+            <div class="figure">
+              <div class="centered-img">
+                <img src="images/Ellipse.png" alt="" />
+                <img class="floating" src="images/guill.svg" alt="" />
+              </div>
+              <img class="floating" src="images/girl1.png" alt="" />
+              <img class="floating" src="images/girl1.png" alt="" />
+              <img class="floating" src="images/girl2.png" alt="" />
+              <img class="floating" src="images/girl2.png" alt="" />
+            </div>
+            <!-- reviews -->
+            <div id="review-slider" class="reviews">
+              <ul class="review-container">
+                <li>
+                  <!-- rating -->
+                  <div class="rating" data-rating="3">
+                    <span class="rating-star"></span>
+                    <span class="rating-star"></span>
+                    <span class="rating-star"></span>
+                    <span class="rating-star"></span>
+                    <span class="rating-star"></span>
+                  </div>
+                  <p>
+                    “Es ist ein lang erwiesener Fakt, dass ein Leser vom Text
+                    abgelenkt wird, wenn er sich ein Layout ansieht. Der Punkt,
+                    Lorem Ipsum zu nutzen, ist, dass es mehr oder weniger die
+                    normale Anordnung von Buchstaben darstellt und somit nach
+                    lesbarer Sprache aussieht.”
+                  </p>
+                  <h5>Alexander Gibson</h5>
+                </li>
+              </ul>
+              <div class="action row">
+                <button class="prev"><span class="chevron"></span></button>
+                <button class="next circle">
+                  <span class="chevron"></span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="web-posts" class="web-resources">
+        <div class="container">
+          <h2>our latests blog <span>posts</span></h2>
+          <nav>
+            <ul class="tabs">
+              <li class="tab"><a href="">SEO</a></li>
+              <li class="tab"><a href="">Development</a></li>
+              <li class="tab"><a href="">Desining</a></li>
+              <li class="tab"><a href="">Freelancing</a></li>
+            </ul>
+            <a href="/" class="more"
+              >View All <span class="arrow-right"></span>
+            </a>
+          </nav>
+          <div class="tab-content">
+            <div class="tab-pane active">
+              <ul class="resources-list">
+                <li class="resource-card">
+                  <img
+                    class="resource-card-image"
+                    src="./images/r4.png"
+                    alt=""
+                  />
+                  <div class="resource-card-body">
+                    <div class="resource-card-header">
+                      <h5>Plugin name</h5>
+                      <p>Blog</p>
+                    </div>
+                    <button class="btn btn-small">View</button>
+                  </div>
+                </li>
+                <li class="resource-card">
+                  <img
+                    class="resource-card-image"
+                    src="./images/b2.png"
+                    alt=""
+                  />
+                  <div class="resource-card-body">
+                    <div class="resource-card-header">
+                      <h5>Plugin name</h5>
+                      <p>Blog</p>
+                    </div>
+                    <button class="btn btn-small">View</button>
+                  </div>
+                </li>
+                <li class="resource-card">
+                  <img
+                    class="resource-card-image"
+                    src="./images/b3.png"
+                    alt=""
+                  />
+                  <div class="resource-card-body">
+                    <div class="resource-card-header">
+                      <h5>Plugin name</h5>
+                      <p>Blog</p>
+                    </div>
+                    <button class="btn btn-small">View</button>
+                  </div>
+                </li>
+                <li class="resource-card">
+                  <img
+                    class="resource-card-image"
+                    src="./images/b4.png"
+                    alt=""
+                  />
+                  <div class="resource-card-body">
+                    <div class="resource-card-header">
+                      <h5>Plugin name</h5>
+                      <p>Blog</p>
+                    </div>
+                    <button class="btn btn-small">View</button>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- footer -->
     <footer></footer>
