--- a/3.css/landing-page/index.html
+++ b/3.css/landing-page/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/process.css" />
     <link rel="stylesheet" href="css/resourcess.css" />
     <link rel="stylesheet" href="css/testimonials.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
     <!-- navbar -->
@@ -579,6 +580,43 @@
       </section>
     </main>
     <!-- footer -->
-    <footer></footer>
+    <footer>
+      <div class="container row">
+        <!-- logo -->
+        <a href="/" class="logo"
+          ><img src="./images/logo.png" alt="Agency's logo"
+        /></a>
+
+        <!-- links -->
+        <ul class="row links">
+          <li><a href="">Privacy Policy</a></li>
+          <li><a href="">Terms & Conditions</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">License</a></li>
+        </ul>
+        <!-- social media -->
+        <ul class="row social">
+          <li>
+            <a href=""><span class="ic--baseline-facebook"></span></a>
+          </li>
+          <li>
+            <a href=""><span class="mdi--twitter"></span></a>
+          </li>
+          <li>
+            <a href=""><span class="mdi--instagram"></span></a>
+          </li>
+          <li>
+            <a href=""><span class="mdi--linkedin"></span></a>
+          </li>
+          <li>
+            <a href=""><span class="hugeicons--dribbble"></span></a>
+          </li>
+          <li>
+            <a href=""><span class="mdi--pinterest"></span></a>
+          </li>
+        </ul>
+        <p class="copyright">Copyright 2025 | GMC</p>
+      </div>
+    </footer>
   </body>
 </html>
