--- a/3.css/landing-page/index.html
+++ b/3.css/landing-page/index.html
@@ -35,9 +35,14 @@
           <li><a href="">Templates</a></li>
           <li><a href="">Blog</a></li>
           <li><a href="">Support</a></li>
+          <button class="close">X</button>
         </ul>
         <!-- actions -->
         <button class="btn">Contact Us</button>
+        <button class="hamburger">
+          <span class="line"></span>
+          <span class="line"></span><span class="line"></span>
+        </button>
       </nav>
     </header>
     <!-- main content -->
@@ -371,6 +376,8 @@
         </div>
         <img src="./images/Image.png" alt="" />
       </section>
+
+      <!--  -->
       <section id="web-resources" class="web-resources">
         <div class="container">
           <h2>WordPress <span>RESOURCES</span></h2>
