--- a/3.css/landing-page/index.html
+++ b/3.css/landing-page/index.html
@@ -643,5 +643,7 @@
     <!-- JS -->
     <script src="js/script.js"></script>
     <script src="js/hero.js"></script>
+    <script src="js/services.js"></script>
+    <script src="js/navbar.js"></script>
   </body>
 </html>
