--- a/3.css/landing-page/index.html
+++ b/3.css/landing-page/index.html
@@ -272,12 +272,38 @@
                 </div>
                 <img src="./images/project.png" alt="" />
               </li>
+              <li class="card">
+                <img src="./images/project.png" alt="" />
+                <div class="card-body">
+                  <div class="title">
+                    <hr />
+                    <h3>Landing Page UI</h3>
+                  </div>
+                  <div class="description">
+                    <p>Nike Landing Page Website</p>
+                    <div class="circle">
+                      <span class="arrow-top"></span>
+                    </div>
+                  </div>
+                </div>
+              </li>
+              <li class="card">
+                <div class="card-body">
+                  <div class="title">
+                    <hr />
+                    <h3>Landing Page UI</h3>
+                  </div>
+                  <div class="description">
+                    <p>Nike Landing Page Website</p>
+                    <div class="circle">
+                      <span class="arrow-top"></span>
+                    </div>
+                  </div>
+                </div>
+                <img src="./images/project.png" alt="" />
+              </li>
             </ul>
-            <div class="projects-dots">
-              <div class="dot"></div>
-              <div class="dot"></div>
-              <div class="dot"></div>
-            </div>
+            <div class="project-dots"></div>
           </div>
         </div>
         <div class="main-color"></div>
@@ -645,5 +671,7 @@
     <script src="js/hero.js"></script>
     <script src="js/services.js"></script>
     <script src="js/navbar.js"></script>
+    <script src="https://unpkg.com/embla-carousel/embla-carousel.umd.js"></script>
+    <script src="js/projects.js"></script>
   </body>
 </html>
